--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shared_preferences: ^0.4.2
   validate: ^1.6.0
   modal_progress_hud: ^0.0.6
+  parallax_image: ^0.2.0
 
 dev_dependencies:
   flutter_test:
