--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   validate: ^1.6.0
   modal_progress_hud: ^0.0.6
   parallax_image: ^0.2.0
+  photo_view: ^0.0.3
+  zoomable_image: ^1.2.0
+  transparent_image: ^0.1.0
+  carousel: ^0.1.0
 
 dev_dependencies:
   flutter_test:
