--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,7 @@ dependencies:
   flutter_launcher_icons: ^0.6.0
   flutter_map: ^0.0.11+1
   cached_network_image: "^0.4.1"
-
-
+  url_launcher: ^3.0.3
 
 flutter_icons:
   android: true
