--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- Daxiong Add use googl map-->
-     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -20,10 +21,10 @@
         android:label="erent"
         android:icon="@mipmap/ic_launcher">
         
-          <!--- Daxiong Add google map 
+          <!--- Daxiong Add google map -->
         <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCeiF-vbGdEdtOXAgqFzx26913Y3V4OrFI"/>
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
-        -->
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
