--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter_map: ^0.0.11+1
   cached_network_image: "^0.4.1"
   url_launcher: ^3.0.3
+  image_cropper: ^0.0.6
+  
 
 flutter_icons:
   android: true
