--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,20 @@ dependencies:
   http: any
   shared_preferences: ^0.4.2
   validate: ^1.6.0
-  modal_progress_hud: ^0.0.6
-  parallax_image: ^0.2.0
+  modal_progress_hud: any
+  parallax_image: any
   photo_view: ^0.0.3
-  zoomable_image: ^1.2.0
   transparent_image: ^0.1.0
-  carousel: ^0.1.0
   image_picker: ^0.4.6
   dio: ^1.0.0
   flutter_one_signal: ^0.2.1
   flutter_launcher_icons: ^0.6.0
-  flutter_map: ^0.0.11+1
+  flutter_map: any
   cached_network_image: "^0.4.1"
   url_launcher: ^3.0.3
+  carousel_slider: ^0.0.7
   image_cropper: ^0.0.6
+  
   
 
 flutter_icons:
