change to relase

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.erent">
+    package="com.cyberia.erent">
 
     <!-- The INTERNET permission is required for development. Specifically,
          flutter needs it to communicate with the running application
@@ -18,12 +18,10 @@
          additional functionality it is fine to subss here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="erent"
+        android:label="eRent"
         android:icon="@mipmap/ic_launcher">
         
           <!--- Daxiong Add google map -->
-        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyCeiF-vbGdEdtOXAgqFzx26913Y3V4OrFI"/>
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
         
         <activity
             android:name=".MainActivity"
@@ -44,7 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />  
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
