--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,20 @@ dependencies:
   image_picker: ^0.4.6
   dio: ^1.0.0
   flutter_one_signal: ^0.2.1
-  flutter_launcher_icons: ^0.6.0
+  flutter_launcher_icons: "^0.6.1"
   flutter_map: any
   cached_network_image: "^0.4.1"
   url_launcher: ^3.0.3
   carousel_slider: ^0.0.7
   image_cropper: ^0.0.6
-  money: ^0.2.1 
+  money: ^0.2.1
   
   
 
 flutter_icons:
   android: true
   ios: true 
-  image_path: "assets/icon/app.png"
+  image_path: "assets/icon/logo.png"
 
 dev_dependencies:
   flutter_test:
